# local-workflow-agent

./: .gitignore  Cargo.toml  README.md
docs/: developer-quickstart.md
docs/superpowers/plans/: 2026-06-28-agent-gui.md  2026-06-28-turso-memory.md  2026-06-28-turso-migration.md  2026-07-01-ui-agent-core-loop.md  2026-07-01-ui-agent-lib-dedup.md
docs/superpowers/specs/: 2026-06-28-agent-gui-design.md  2026-06-28-turso-memory-design.md  2026-06-28-turso-migration-design.md  2026-07-01-ui-agent-core-loop-design.md  2026-07-01-ui-agent-lib-dedup-design.md
src/: lib.rs  main.rs
src/agent/: mock_provider.rs  mod.rs  turn.rs
src/api/: auth.rs  codex_adapter.rs  error_handling.rs  mod.rs  model_registry.rs  provider.rs  provider_error.rs  provider_types.rs  registry.rs  stream_parser.rs  transform.rs  uploads.rs
src/api/providers/: anthropic.rs  azure.rs  bedrock.rs  codex.rs  cohere.rs  copilot.rs  free.rs  google.rs  message_normalization.rs  minimax.rs  mod.rs  openai.rs  openai_compat.rs  openai_compat_providers.rs  request_options.rs
src/api/transformers/: anthropic.rs  openai_chat.rs
src/assets/: models-snapshot.json
src/cmd/: mod.rs  named_commands.rs  stats.rs
src/core/: context_collapse.rs  goal.rs  message_utils.rs  mod.rs  oauth_config.rs  session_storage.rs  skill_discovery.rs  sqlite_storage.rs
src/mcp/: backend.rs  connection_manager.rs  mod.rs  rmcp_backend.rs
src/query/: agent_tool.rs  away_summary.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  cron_scheduler.rs  goal_loop.rs  managed_orchestrator.rs  mod.rs  session_memory.rs
src/tools/: apply_patch.rs  ask_user.rs  bash.rs  batch_edit.rs  brief.rs  computer_use.rs  config_tool.rs  cron.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  formatter.rs  glob_tool.rs  goal_complete.rs  grep_tool.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_resources.rs  mod.rs  monitor_tool.rs  notebook_edit.rs  powershell.rs  pty_bash.rs  repl_tool.rs  send_message.rs  skill_tool.rs  tasks.rs  team_tool.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs
src/ui/: app.rs  app_view.rs  ask_modal.rs  assets.rs  chat.rs  handler.rs  mod.rs  model.rs  permission_modal.rs  settings.rs  settings_panel.rs  storage.rs  stream.rs  theme.rs  turn.rs  window.rs
src/ui/input/: attachments.rs  input_bar.rs  mod.rs
src/ui/provider/: anthropic.rs  openai.rs  unified.rs
src/ui/services/: mod.rs
src/ui/services/agent/: client.rs  files.rs  messages.rs  mod.rs  permission_handler.rs  types.rs
src/ui/session/: block.rs  message.rs  mod.rs  session_list.rs  session_view.rs  tools.rs
src/ui/settings/: mod.rs  persistence.rs  settings_panel.rs
src/ui/test_support/: mock_provider.rs  mod.rs
tests/: core_sqlite_storage.rs  sqlite_storage_turso.rs  ui_settings_persistence.rs  ui_settings_runtime.rs  ui_storage.rs  ui_stream_anthropic.rs  ui_stream_openai.rs  ui_stream_unified.rs  ui_turn_e2e.rs  ui_turn_loop.rs
