[package]
name = "local-workflow-agent"
version = "0.1.0"
edition = "2024"

[features]
gui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:rfd", "dep:rust-embed"]
computer-use = []
default = ["gui"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# HTTP
reqwest = { version = "0.13", features = ["json", "stream", "rustls", "multipart", "form", "query"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
url = "2"
mime = "0.3"
mime_guess = "2"
urlencoding = "2"
turso = "0.6.1"

# Text processing
similar = "2"
unicode-width = "0.2"
unicode-segmentation = "1"

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Crypto
hmac = "0.12"

# MCP
rmcp = { version = "1.4.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-tls-no-provider"] }
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", optional = true }
gpui-component-assets = { version = "0.5", optional = true }
rfd = { version = "0.14", optional = true, default-features = false, features = ["xdg-portal", "tokio"] }
rust-embed = { version = "8.9", optional = true }
async-channel = "2.5"
bincode = "1"

[[bin]]
name = "agent-gui"
path = "src/bin/agent-gui.rs"
required-features = ["gui"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
